# hector_core

./: AUTHORS  DEPENDENCIES  Makefile.am  NOTES  README  TODO  configure.ac  hector_config.dtd  hector_config.xml.example  hector_core.pc.in  hector_core.supp  hector_server.log.props.example  helen_config.dtd  helen_config.xml  helen_config.xml.example  reconf  valgrind.supp
lib/: CondLock.h  Config.cc  Config.h  Connection.h  CyclicBuffer.h  EmbeddedPerl.cc  EmbeddedPerl.h  EmbeddedPython.cc  EmbeddedPython.h  Hector.i  IpAddr.cc  IpAddr.h  IpAddr.i  LibraryLoader.cc  LibraryLoader.h  Lock.h  MD5.cc  MD5.h  Makefile.am  MemoryPool.h  Object.cc  Object.h  Object.i  ObjectProperties.h  ObjectRegistry.cc  ObjectRegistry.h  ObjectRegistry.i  ObjectValues.h  PlainLock.h  ProcessConnection.cc  ProcessConnection.h  RWLock.h  Server.cc  Server.h  StdioConnection.h  StdioConnection.i  SyncQueue.h  common.cc  common.h  common.i
lib/java/: Makefile.am
lib/perl/: Makefile.am
lib/processing_engine/: BaseServer.cc  BaseServer.h  CallProcessingEngine.cc  CallProcessingEngine.h  CallProcessingEngineModule.cc  CallProcessingEngineModule.h  Makefile.am  Module.cc  Module.h  Module.i  OutputFilter.h  PerlInterpreters.cc  PerlInterpreters.h  PerlModule.cc  PerlModule.h  PerlResource.cc  PerlResource.h  PerlResource.i  PerlResourceInterpreter.cc  PerlResourceInterpreter.h  ProcessingEngine.cc  ProcessingEngine.h  ProcessingEngine.i  Processor.cc  Processor.h  ProtobufResource.cc  ProtobufResource.h  ProtobufResource.i  PythonModule.cc  PythonModule.h  RPCMessage.cc  RPCMessage.h  RPCMessage.i  RPCMessage.proto  RPCSimpleModule.cc  Resource.cc  Resource.h  Resource.i  ResourceAttrInfo.h  ResourceAttrInfo.i  (+22 more)
lib/processing_engine/module/: Load.cc  Load.h  Makefile.am  Null.cc  Null.h  Save.cc  Save.h  TestCall.cc  TestCall.h  TestInput.cc  TestInput.h
lib/processing_engine/modules/: DummySimple.h  Dump.cc  Dump.h  Load.cc  Load.h  LoadResource.cc  LoadResource.h  Makefile.am  ModuleExternalSimple.cc  ModuleExternalSimple.h  Save.cc  Save.h  SaveResource.cc  SaveResource.h  TestCall.cc  TestCall.h  TestInput.cc  TestInput.h  TestMulti.cc  TestMulti.h  TestOutput.cc  TestOutput.h  TestSimple.cc  TestSimple.h
lib/processing_engine/resource/: Makefile.am  MarkerResource.h  TestProtobufResource.cc  TestProtobufResource.i  TestResource.cc  TestResource.h  TestResource.i
lib/processing_engine/resources/: Makefile.am  MarkerResource.cc  MarkerResource.h  MarkerResource.i  MarkerResourceWrapper.cc  MarkerResourceWrapper.h  NOTES  Resources.h  Resources.i  TestProtobufResource.cc  TestProtobufResource.h  TestProtobufResource.i  TestProtobufResource.proto  TestProtobufResourceWrapper.cc  TestProtobufResourceWrapper.h  TestResource.cc  TestResource.h  TestResource.i  TestResourceWrapper.cc  TestResourceWrapper.h  WebResource.cc  WebResource.i
lib/processing_engine/server/: TestServer.h
lib/python/: Makefile.am
lib/server/: Makefile.am  SimpleHTTPConn.cc  SimpleHTTPConn.h  SimpleHTTPServer.cc  SimpleHTTPServer.h  SimpleServer.cc  SimpleServer.h
misc/: Makefile.am  (+3 more)
src/: Makefile.am  NOTES  hector_client  hector_common.sh  hector_server.cc  server.cc
src/config/: config.dtd  config.xml  master-config.xml  robot-config.xml  robot.log.props
src/lib/: CondLock.h  Config.cc  Config.h  ConfigParser.cc  ConfigParser.h  Connection.h  Connection.i  CyclicBuffer.cc  CyclicBuffer.h  ExternalProcess.cc  ExternalProcess.h  Hector.i  LibraryLoader.cc  LibraryLoader.h  Lock.h  Makefile.am  Object.cc  Object.h  ObjectRegistry.cc  ObjectRegistry.h  ObjectValues.h  PrioritySyncQueue.h  ProcessConnection.h  Server.cc  Server.h  SimpleHTTPConn.cc  SimpleHTTPConn.h  SimpleHTTPHandler.h  SimpleHTTPServer.cc  SimpleHTTPServer.h  SimpleServer.cc  SimpleServer.h  StdioConnection.cc  StdioConnection.h  StdioConnection.i  SyncQueue.h  common.cc  common.h
src/module/: Makefile.am  ModuleDummy.cc  ModuleDummy.h  ModuleSaveResource.h
src/modules/: DummyInput.cc  DummyInput.h  DummyOutput.cc  DummyOutput.h  DummySimple.cc  DummySimple.h  Makefile.am  ModuleDummy.cc  ModuleDummy.h  ModuleDummyInput.cc  ModuleDummyInput.h  ModuleDummyOutput.cc  ModuleDummyOutput.h  ModuleDummySimple.cc  ModuleDummySimple.h  ModuleLoadResource.cc  ModuleLoadResource.h  ModuleSaveResource.cc  ModuleSaveResource.h  TestInput.cc  TestInput.h  TestOutput.cc  TestOutput.h  TestSimple.cc  TestSimple.h
src/resources/: Makefile.am  ResourceList.h  Resources.h  Resources.i  TestResource.cc  TestResource.h  TestResource.i  TestResource.proto  WebResource.cc  WebResource.h  WebResource.i  WebResource.proto
src/robot/: ExternalProcess.cc  ExternalProcess.h  Makefile.am  Module.h  ModuleInput.h  ModuleOutput.h  ModuleParallel.h  ModuleSimple.h  NOTES  ProcessingChain.cc  ProcessingChain.h  Processor.cc  Processor.h  ProcessorInput.cc  ProcessorInput.h  ProcessorOutput.cc  ProcessorOutput.h  ProcessorParallel.cc  ProcessorParallel.h  ProcessorSimple.cc  ProcessorSimple.h  Resource.cc  Resource.h  Resource.proto  ResourceQueue.cc  ResourceQueue.h  Robot.cc  RobotHTTPServer.cc  RobotHTTPServer.h
src/server/: Makefile.am
test/: Makefile.am  call.sh  call.xml  common.sh  input_copy_output.sh  input_copy_output.xml  input_copy_output_pl.sh  input_copy_output_pl.xml  input_copy_output_py.sh  input_copy_output_py.xml  input_loop_output.sh  input_loop_output.xml  input_loop_output_pl.sh  input_loop_output_pl.xml  input_loop_output_py.sh  input_loop_output_py.xml  input_multi_output.sh  input_multi_output.xml  input_multi_output_pl.log.correct  input_multi_output_pl.sh  input_multi_output_pl.xml  input_multi_output_py.sh  input_multi_output_py.xml  input_output.sh  input_output.xml  input_output_mt.sh  input_output_mt.xml  input_output_mt_pl.sh  input_output_mt_pl.xml  input_output_mt_py.sh  input_output_mt_py.xml  input_output_perl_resource.sh  input_output_perl_resource.xml  input_output_perl_resource_pl.sh  input_output_perl_resource_pl.xml  input_output_pl.log.correct  input_output_pl.sh  input_output_pl.xml  input_output_py.sh  input_output_py.xml  (+158 more)
(+118 files in other folders)
