ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib src test

EXTRA_DIST = configure hector_config.dtd hector_config.xml.example hector_server.log.props.example hector_core.pc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = hector_core.pc

hectordatadir = $(datadir)/hector
hectordata_DATA = hector_config.dtd
