TESTS_ENVIRONMENT = PATH='$(top_srcdir)/test:$(top_builddir)/src:$(PATH)' LD_LIBRARY_PATH=$(top_builddir)/lib/processing_engine/modules:$(top_builddir)/lib/processing_engine/resources:$(top_builddir)/lib/processing_engine/servers:$(top_builddir)/lib/perl/.libs:$(top_builddir)/lib/python/.libs:$(LD_LIBRARY_PATH) PERL5LIB=$(top_builddir)/lib/perl PYTHONPATH=$(top_builddir)/lib/python $(SHELL)

TESTS =
EXTRA_DIST = test_common.sh
CLEANFILES = test*.log.valgrind

TESTS += test1.sh
EXTRA_DIST += test1.sh test1_config.xml test1.log.correct
CLEANFILES += test1.log test1.log.result

TESTS += test2.sh
EXTRA_DIST += test2.sh test2_config.xml test2.log.correct
CLEANFILES += test2.log test2.log.result

TESTS += test3.sh
EXTRA_DIST += test3.sh test3_config.xml test3.log.correct
CLEANFILES += test3.log test3.log.result

TESTS += test4.sh
EXTRA_DIST += test4.sh test4_config.xml test4.log.correct
CLEANFILES += test4.log test4.log.result

TESTS += test5.sh
EXTRA_DIST += test5.sh test5_config.xml test5.log.correct
CLEANFILES += test5.log test5.log.result

TESTS += test6.sh
EXTRA_DIST += test6.sh test6_config.xml test6.log.correct
CLEANFILES += test6.log test6.log.result

TESTS += test7.sh
EXTRA_DIST += test7.sh test7_config.xml test7.log.correct
CLEANFILES += test7.log test7.log.result

TESTS += test8.sh
EXTRA_DIST += test8.sh test8_config.xml test8.log.correct
CLEANFILES += test8.log test8.log.result

TESTS += test9.sh
EXTRA_DIST += test9.sh test9_config.xml test9.log.correct
CLEANFILES += test9.log test9.log.result

TESTS += test10.sh
EXTRA_DIST += test10.sh test10_config.xml test10.log.correct test10.data.in
CLEANFILES += test10.log test10.log.result test10.data.out

TESTS += test11.sh
EXTRA_DIST += test11.sh test11_config.xml test11.log.correct
CLEANFILES += test11.log test11.log.result

TESTS += test12.sh
EXTRA_DIST += test12.sh test12_config.xml test12.log.correct
CLEANFILES += test12.log test12.log.result

TESTS += test13.sh
EXTRA_DIST += test13.sh test13_config.xml test13.log.correct
CLEANFILES += test13.log test13.log.result

TESTS += test14.sh
EXTRA_DIST += test14.sh test14_config.xml test14.log.correct
CLEANFILES += test14.log test14.log.result

TESTS += test15.sh
EXTRA_DIST += test15.sh test15_config.xml test15.log.correct
CLEANFILES += test15.log test15.log.result

TESTS += test16.sh
EXTRA_DIST += test16.sh test16_config.xml test16.log.correct
CLEANFILES += test16.log test16.log.result

TESTS += test17.sh
EXTRA_DIST += test17.sh test17_config.xml test17.log.correct
CLEANFILES += test17.log test17.log.result

TESTS += test18.sh
EXTRA_DIST += test18.sh test18_config.xml test18.log.correct
CLEANFILES += test18.log test18.log.result

TESTS += test19.sh
EXTRA_DIST += test19.sh test19_config.xml test19.log.correct
CLEANFILES += test19.log test19.log.result

TESTS += test21.sh
EXTRA_DIST += test21.sh test21_config.xml test21.log.correct
CLEANFILES += test21.log test21.log.result

TESTS += test22.sh
EXTRA_DIST += test22.sh test22_config.xml test22.log.correct
CLEANFILES += test22.log test22.log.result

TESTS += test23.sh
EXTRA_DIST += test23.sh test23_config.xml test23.log.correct
CLEANFILES += test23.log test23.log.result

TESTS += test24.sh
EXTRA_DIST += test24.sh test24_config.xml test24.log.correct
CLEANFILES += test24.log test24.log.result

TESTS += test25.sh
EXTRA_DIST += test25.sh test25_config.xml test25.log.correct
CLEANFILES += test25.log test25.log.result

TESTS += test26.sh
EXTRA_DIST += test26.sh test26_config.xml test26.log.correct
CLEANFILES += test26.log test26.log.result

TESTS += test27.sh
EXTRA_DIST += test27.sh test27_config.xml test27.log.correct
CLEANFILES += test27.log test27.log.result

TESTS += test28.sh
EXTRA_DIST += test28.sh test28_config.xml test28.log.correct
CLEANFILES += test28.log test28.log.result

TESTS += test29.sh
EXTRA_DIST += test29.sh test29_config.xml test29.log.correct
CLEANFILES += test29.log test29.log.result

TESTS += test30.sh
EXTRA_DIST += test30.sh test30_config.xml test30.log.correct test30.data.in
CLEANFILES += test30.log test30.log.result test30.data.out

TESTS += test31.sh
EXTRA_DIST += test31.sh test31_config.xml test31.log.correct test31.data.in
CLEANFILES += test31.log test31.log.result test31.data.out

TESTS += test32.sh
EXTRA_DIST += test32.sh test32_config.xml test32.log.correct
CLEANFILES += test32.log test32.log.result

TESTS += test33.sh
EXTRA_DIST += test33.sh test33_config.xml test33.log.correct
CLEANFILES += test33.log test33.log.result

TESTS += test34.sh
EXTRA_DIST += test34.sh test34_config.xml test34.log.correct
CLEANFILES += test34.log test34.log.result
